# advent_of_caml

./: aoc.opam  dune-project
2024/d01/: d01.ml  dune
2024/d02/: d02.ml  dune
2024/d03/: d03.ml  dune
2024/lib/: lib.ml  lib.mli
